# colmapeasy

./: .gitmodules  CMakeLists.txt  README.md  setup.py
.github/workflows/: conda.yml
colmapeasy/: __init__.py  colmapeasy.py  matching.py
conda.recipe/: meta.yaml
docs/: Makefile  cmake_example.rst  conf.py  index.rst  make.bat
include/: easy_cache.hpp  easy_mapper.hpp  feature_extractor.hpp  incremental_mapper.hpp  matcher.hpp  types.hpp  types.hppbak  util.hpp  verifier.hpp
src/: main.cpp
test_data/: automatic_reconstruction.sh  easy_reconstruction.py
tests/: test_basic.py
